--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "kaleido (>=1.1.0,<2.0.0)",
     "torch (>=2.8.0)",
     "beautifulsoup4 (>=4.14.0,<5.0.0)",
+    "psutil (>=5.9.0,<6.0.0)",
 ]
 
 [tool.poetry]
