--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -95,7 +95,7 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
-      - name: 🔍 Monitor Resources (Start)
+      - name: Monitor Resources (Start)
         run: |
           chmod +x scripts/monitor_resources.sh
           echo "=== RESOURCE MONITORING (JOB START) ==="
@@ -117,7 +117,7 @@ jobs:
           # Add src to Python path for our modules
           echo "PYTHONPATH=$PWD/src:$PYTHONPATH" >> $GITHUB_ENV
           
-          echo "🔍 Monitor after dependency installation:"
+          echo "Monitor after dependency installation:"
           ./scripts/monitor_resources.sh
 
       - name: Check available disk space
@@ -206,12 +206,12 @@ jobs:
           echo "Running: poetry run python ./scripts/scrape_data.py $ARGS"
           echo ""
           
-          echo "🔍 Monitor before scraping:"
+          echo "Monitor before scraping:"
           ./scripts/monitor_resources.sh
           
           python ./scripts/scrape_data.py $ARGS
           
-          echo "🔍 Monitor after scraping:"
+          echo "Monitor after scraping:"
           ./scripts/monitor_resources.sh
 
       - name: Count new records
@@ -308,34 +308,31 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
-      - name: Cache Poetry packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/pypoetry/cache
-            ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: ${{ runner.os }}-poetry-
-
-      - name: Set up Python & Poetry
+      - name: Set up Python & Minimal Dependencies (Scraper-only)
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction
+          echo "Installing minimal scraper dependencies only (no ML packages)..."
+          pip install -r requirements-scraper.txt
+          
+          # Add src to Python path for our modules
+          echo "PYTHONPATH=$PWD/src:$PYTHONPATH" >> $GITHUB_ENV
+          
+          echo "Monitor after dependency installation:"
+          ./scripts/monitor_resources.sh
 
       - name: Detect recently changed statuses
         id: detect_changes
         run: |
           CUTOFF_MONTHS="${{ github.event.inputs.cutoff_months || '3' }}"
           
-          echo "🔍 RECENT STATUS CHANGE DETECTION (FAST SCAN)"
+          echo "RECENT STATUS CHANGE DETECTION (FAST SCAN)"
           echo "Strategy: Scan only listing pages for status changes in the last $CUTOFF_MONTHS months"
           echo "Advantage: 100x faster than comprehensive scraping for status monitoring"
           echo "Cutoff months: $CUTOFF_MONTHS"
           echo "Backend: ${{ github.event.inputs.backend || 'beautifulsoup' }}"
           
           # Run fast status change detection
-          poetry run python ./scripts/scrape_data.py \
+          python ./scripts/scrape_data.py \
             --fetch-changed-urls \
             --cutoff-months $CUTOFF_MONTHS \
             --backend "${{ github.event.inputs.backend || 'beautifulsoup' }}" \
