changed git push to push to HEAD: instead of always to master

--- a/.github/workflows/aggregate_embedding_results.yml
+++ b/.github/workflows/aggregate_embedding_results.yml
@@ -51,7 +51,7 @@ jobs:
           RETRIES=10
           for i in $(seq 1 $RETRIES); do
             git pull --rebase
-            git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master && break || {
+            git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:"$BRANCH" && break || {
               echo "Push failed, retrying ($i/$RETRIES)..."
               sleep 3
             }
