--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -534,7 +534,7 @@ jobs:
           RETRIES=10
           for i in $(seq 1 $RETRIES); do
             git pull --rebase
-            git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master && {
+            git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:"$BRANCH" && {
               echo "Successfully pushed recent resolution updates!"
               break
             } || {
@@ -652,7 +652,7 @@ jobs:
           RETRIES=10
           for i in $(seq 1 $RETRIES); do
             git pull --rebase
-            git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master && {
+            git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:"$BRANCH" && {
               echo "Successfully pushed old resolution updates!"
               break
             } || {
