--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -95,11 +95,11 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
-      - name: Monitor Resources (Start)
-        run: |
-          chmod +x scripts/monitor_resources.sh
-          echo "=== RESOURCE MONITORING (JOB START) ==="
-          ./scripts/monitor_resources.sh
+      # - name: Monitor Resources (Start)
+      #   run: |
+      #     chmod +x scripts/monitor_resources.sh
+      #     echo "=== RESOURCE MONITORING (JOB START) ==="
+      #     ./scripts/monitor_resources.sh
 
       - name: Cache pip packages  
         uses: actions/cache@v4
@@ -203,7 +203,7 @@ jobs:
           fi
           echo "Buffer size: $BUFFER_SIZE (optimized for CI disk space constraints)"
           
-          echo "Running: poetry run python ./scripts/scrape_data.py $ARGS"
+          echo "Running: python ./scripts/scrape_data.py $ARGS"
           echo ""
           
           echo "Monitor before scraping:"
@@ -328,12 +328,9 @@ jobs:
           echo "Installing minimal scraper dependencies only (no ML packages)..."
           pip install -r requirements-scraper.txt
 
-          # Add src to Python path for our modules
+      - name: Set PYTHONPATH
+        run: |
           echo "PYTHONPATH=$PWD/src:$PYTHONPATH" >> $GITHUB_ENV
-
-          chmod +x scripts/monitor_resources.sh
-          echo "Monitor after dependency installation:"
-          ./scripts/monitor_resources.sh
 
       - name: Detect recently changed statuses
         id: detect_changes
@@ -388,33 +385,27 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
-      - name: Cache Poetry packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/pypoetry/cache
-            ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: ${{ runner.os }}-poetry-
-
-      - name: Set up Python & Poetry
+      - name: Set up Python & Minimal Dependencies (Scraper-only)
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction
+          echo "Installing minimal scraper dependencies only (no ML packages)..."
+          pip install -r requirements-scraper.txt
+
+      - name: Set PYTHONPATH
+        run: |
+          echo "PYTHONPATH=$PWD/src:$PYTHONPATH" >> $GITHUB_ENV
 
       - name: Load old pending URLs
         id: load_pending
         run: |
           CUTOFF_MONTHS="${{ github.event.inputs.cutoff_months || '3' }}"
           
-          echo "📋 OLD PENDING URL EXTRACTOR"
+          echo "OLD PENDING URL EXTRACTOR"
           echo "Strategy: Extract old pending URLs directly from database (older than $CUTOFF_MONTHS months)"
-          echo "Advantage: Avoids scanning thousands of pages for old content"
           echo "Cutoff months: $CUTOFF_MONTHS"
           
           # Load old pending URLs
-          poetry run python ./scripts/scrape_data.py \
+          python ./scripts/scrape_data.py \
             --load-old-pending \
             --cutoff-months $CUTOFF_MONTHS
           
@@ -449,20 +440,15 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
-      - name: Cache Poetry packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/pypoetry/cache
-            ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: ${{ runner.os }}-poetry-
-
-      - name: Set up Python & Poetry
+      - name: Set up Python & Minimal Dependencies (Scraper-only)
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction
+          echo "Installing minimal scraper dependencies only (no ML packages)..."
+          pip install -r requirements-scraper.txt
+
+      - name: Set PYTHONPATH
+        run: |
+          echo "PYTHONPATH=$PWD/src:$PYTHONPATH" >> $GITHUB_ENV
 
       - name: Download recent changed URLs
         uses: actions/download-artifact@v5
@@ -478,7 +464,7 @@ jobs:
           echo "Backend: ${{ github.event.inputs.backend || 'beautifulsoup' }}"
           
           # Scrape the recently changed URLs
-          poetry run python ./scripts/scrape_data.py \
+          python ./scripts/scrape_data.py \
             --scrape-urls-file recent_changed_urls.txt \
             --backend "${{ github.event.inputs.backend || 'beautifulsoup' }}" \
             --headless "${{ github.event.inputs.headless || 'true' }}"
@@ -557,20 +543,15 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
-      - name: Cache Poetry packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/pypoetry/cache
-            ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: ${{ runner.os }}-poetry-
-
-      - name: Set up Python & Poetry
+      - name: Set up Python & Minimal Dependencies (Scraper-only)
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction
+          echo "Installing minimal scraper dependencies only (no ML packages)..."
+          pip install -r requirements-scraper.txt
+
+      - name: Set PYTHONPATH
+        run: |
+          echo "PYTHONPATH=$PWD/src:$PYTHONPATH" >> $GITHUB_ENV
 
       - name: Download old pending URLs
         uses: actions/download-artifact@v5
@@ -595,7 +576,7 @@ jobs:
           fi
           
           # Scrape the old pending URLs
-          poetry run python ./scripts/scrape_data.py \
+          python ./scripts/scrape_data.py \
             --scrape-urls-file old_pending_urls.txt \
             --backend "${{ github.event.inputs.backend || 'beautifulsoup' }}" \
             --headless "${{ github.event.inputs.headless || 'true' }}"
